# vllm-starter

./: .env.example  .gitignore  AGENTS.md  README.md  llama-bench.sh  vllm-manager.sh
models/: deepseek-v4-flash-162b.yaml  deepseek-v4-flash-180b-mtp.yaml  deepseek-v4-flash-mtp.yaml  deepseek-v4-flash-nvfp4-mtp.yaml  deepseek-v4-flash-spark.yaml  gemma-4-E2B-it.yaml  gpt-oss-120b.yaml  laguna-s-2.1-nvfp4-dflash.yaml  minimax-m2.7-reap-nvfp4.yaml  mistral-small-4-119b-nvfp4.yaml  model-audit-report.md  nemotron-3-super-120b-a12b-mtp.yaml  nemotron-3-super-120b-a12b-nvfp4-mtp.yaml  nemotron-3-super-120b-a12b.yaml  nemotron-3-super.yaml  nex-n2-mini-nvfp4-mtp.yaml  nex-n2-mini-nvfp4.yaml  ornith-1.0-35b-nvfp4.yaml  ornith-1.0-35b.yaml  qwen3-coder-next-nvfp4-gb10.yaml  qwen3.5-122b-a10b-nvfp4.yaml  qwen3.5-122b-a10b.yaml  qwen3.6-27b-aeon-nvfp4-dflash.yaml  qwen3.6-27b-fp8-mtp.yaml  qwen3.6-27b-nvfp4-mtp.yaml  qwen3.6-27b-nvfp4-unsloth-mtp.yaml  qwen3.6-35b-a3b-nvfp4-mtp-yarn.yaml  qwen3.6-35b-a3b-nvfp4-mtp.CRASH-B.md  qwen3.6-35b-a3b-nvfp4-mtp.yaml  qwen3.6-35b-a3b-nvfp4-unsloth-mtp.yaml  qwen3.6-35b-a3b-nvfp4-unsloth.yaml  qwen3.6-35b-a3b-nvfp4.yaml  qwen36-27b-abliterated-nvfp4-mtp.yaml  qwopus3.5-122b-a10b-kimi-k2.6-nvfp4-mtp.yaml  qwopus3.6-27b-v2-nvfp4-mtp.yaml  qwopus3.6-35b-a3b-nvfp4-mtp.yaml  step3p7-flash-148b.yaml  step3p7-flash-173b.yaml  template.yaml
scripts/: bench-graph.py  bench-parse.py  bench-parse.sh  (+1 more)
tools/llama-benchy/: pyproject.toml
tools/llama-benchy/llama_benchy/: __main__.py  _version.py  client.py  config.py  graph.py  results.py  runner.py
(+66 files in other folders)
